Add build niceties to ensure UTF-8, output configuration cache warnings, and add standalone plugins project